Fix footer spacing and main layout, update product and footer styles

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  margin: 0;
+  padding: 0;
+}
+
+
 .text-brand-name:hover {
   color: #a8ec81 !important;
   transform: scaleY(1) !important;
